<resources>
    <string name="app_name" translatable="false">Gymtastic</string>

    <string name="preference_file_key" translatable="false">com.thetechtriad.drh.gymtastic.PREFERENCE_FILE_KEY</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username/Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to signup -->
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="prompt_firstname">Firstname</string>
    <string name="prompt_lastname">Lastname</string>
    <string name="prompt_signup_email">Email</string>
    <string name="prompt_signup_password">Password</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="title_activity_gyms">Gyms</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="error_invalid_firstname">Firsname must be more than 4 characters</string>
    <string name="error_invalid_lastname">Lastname must be more than 4 characters</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">Gyms</string>
    <string name="tab_text_2">Workouts</string>
    <string name="tab_text_3">Instructors</string>

    <string name="title_activity_splash_screen" translatable="false">Gymtastic</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="facebook_app_id" translatable="false">1114428632057506</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1114428632057506</string>

    <string name="action_profile">Profile</string>
    <string name="action_logout">Logout</string>


    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="openDrawer" translatable="false">open_drawer</string>
    <string name="closeDrawer" translatable="false">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_share">Share App</string>
    <string name="nav_language">Language</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>
    <string name="nav_app_version">App Version</string>
    <string name="nav_privacy_policy">Privacy Policy</string>
    <string name="nav_terms_and_conditions">Terms &amp; Conditions</string>
    <string name="nav_sign_out">Sign Out</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Gymtastic</item>
        <item>Profile</item>
        <item>Settings</item>
        <item>About</item>
        <item>Terms &amp; Conditions</item>
    </string-array>

    <string name="activity_title_about_us">About</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_conditions">Terms &amp; Conditions</string>
    <string name="sign_out">Sign Out</string>
    <string name="action_refresh">Refresh</string>
    <string name="nav_header_desc">User Image</string>
    <string name="nav_header_title" translatable="false">Gymtastic App</string>
    <string name="nav_header_subtitle" translatable="false">gymtastic@app.com</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="have_an_account">Have an account?</string>
    <string name="email">EMAIL</string>
    <string name="facebook" translatable="false">Facebook</string>
    <string name="reps" translatable="false">reps</string>
    <string name="other">Other</string>
    <string name="gymtastic" translatable="false">Gymtastic</string>
    <string name="facebook_login">Facebook Login</string>
    <string name="register">Register</string>
    <string name="exercise">Exercise</string>
    <string name="sets" translatable="false">sets</string>
    <string name="date_opt">Date (opt)</string>
    <string name="add">ADD</string>
    <string name="login_with">LOGIN WITH</string>
    <string name="date">date</string>
    <string name="location">location</string>
    <string name="no_instructors_available">No Instructors Available</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->
    <string-array name="pref_language_list_titles">
        <item>English</item>
        <item>Swahili</item>
    </string-array>
    <string-array name="pref_language_list_values">
        <item>en</item>
        <item>sw</item>
    </string-array>
    
    <string name="pref_language_key" translatable="false">language</string>

    <string name="pref_title_languages">Language</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="date_picker">Date Picker</string>
    <string name="call">Call</string>
</resources>
