<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_blue_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_blue_24dp"
            android:title="@string/nav_profile" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share_blue_24dp"
            android:title="@string/nav_share" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_blue_24dp"
            android:title="@string/nav_settings" />
    </group>
    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:title="@string/nav_about" />
            <item
                android:id="@+id/nav_app_version"
                android:title="@string/nav_app_version" />
            <item
                android:id="@+id/nav_sign_out"
                android:title="@string/nav_sign_out" />
        </menu>
    </item>
</menu>