<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.thetechtriad.drh.gymtastic.activity.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_profile"
        android:orderInCategory="90"
        android:title="@string/action_profile"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_person_white_24dp"/>
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="80"
        android:title="@string/action_refresh"
        app:showAsAction="always"
        android:icon="@drawable/ic_refresh_white_24dp"
        />
</menu>
